[Native-io][Spark]add NativeVectorizedReader